--- a/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
@@ -933,6 +933,228 @@ body {
             color: blue;
         }
 
+/*INVENTORY PANEL*/
+
+    #inventoryPanel {
+        background: linear-gradient(to bottom, #F1F2F3, #8CA5AD);
+        margin: 0;
+        height: 140vh;
+        overflow-y: auto;
+        scrollbar-width: none;
+        width: 84%;
+    }
+
+    #allItemsLbl {
+        display: block;
+        margin: 10vh 0vw 0vh 7vw;
+        font-family: Poppins;
+        font-weight: bold;
+        font-size: 6vh;
+    }
+
+    #inventoryContainer1 {
+        height: 10%;
+        width: 90%;
+        margin: 4vh 2vw 0vh auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #searchItem {
+        background-color: white;
+        background-image: url('gallery/food and room services elements/icons/navbar/search.png');
+        background-size: 2vw 4vh;
+        background-position: left 20px center;
+        background-repeat: no-repeat;
+        height: 50%;
+        width: 25%;
+        padding: 0vh 0vw 0vh 5vw;
+        border: 1px solid black;
+        border-radius: 10px;
+        font-size: 2.5vh;
+        font-family: Poppins;
+    }
+
+    #addItemBtn {
+        background-color: #006EC4;
+        background-image: url('gallery/food and room services elements/icons/inventory - table icons/white_add.png');
+        background-size: 2vw 4vh;
+        background-position: left 15px center;
+        background-repeat: no-repeat;
+        color: white;
+        height: 50%;
+        width: 15%;
+        padding-left: 20px;
+        border: 1px solid black;
+        border-radius: 10px;
+        margin: 0vh 2vw 0vh auto;
+        font-family: Poppins;
+        cursor: pointer;
+    }
+
+    #inventoryContainer2 {
+        height: 70%;
+        width: 90%;
+        margin: 0vh 2vw 0vh auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #inventoryTable{
+        height: 85%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+    }
+
+    .inventoryRow {
+        background-color: white;
+        height: 20%;
+        width: 100%;
+        border-bottom: 1px solid black;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .inventoryContent {
+        height: 100%;
+        width:25%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-right: 1px solid black;
+        font-size: 2.5vh;
+        overflow-y: auto;
+    }
+
+    .inventoryImgLayout {
+        height: 100%;
+        width: 40%;
+    }
+
+    #refreshInventoryBtn {
+        background-color: #101450;
+        color: white;
+        height: 7%;
+        width: 10%;
+        border: 1px solid black;
+        border-radius: 50px;
+        cursor: pointer;
+        margin: 4vh 2vw 0vh auto;
+    }
+        #refreshInventoryBtn:hover {
+            color: blue;
+        }
+
+    /* CSS FOR ADD ITEM IN INVENTORY */
+
+    #addItemPanel {
+        height: 80%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: fixed;
+        z-index: 2;
+    }
+
+    #addItemContent {
+        background-color: white;
+        height: 80%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #addItemContent1 {
+        height: 20%;
+        width: 100%;
+        display:flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 4vh;
+        font-weight: bold;
+    }
+
+    #addItemContent2 {
+        display: flex;
+        flex-direction: row;
+        height: 80%;
+        width: 100%;
+    }
+
+    .addItemMainContent {
+        display: flex; 
+        flex-direction: column;
+        height: 100%;
+        width: 50%;
+    }
+
+    #insertItemImgFile {
+        margin: 2vh 0vw 0vh 2vw;
+        cursor: pointer;
+    }
+
+    .addItemLbl {
+        font-size: 3.5vh;
+        margin: 2vh 0vw 0vh 2vw;
+    }
+
+    .addItemTxtBox{
+        height: 10%;
+        width: 80%;
+        border: 1px solid black;
+        border-radius: 5px;
+        margin: 0vh 0vw 0vh 2vw;
+        padding-left: 10px;
+    }
+
+    #addNewItemLbl {
+        margin: 0vh 0vw 0vh 2vw;
+    }
+
+    #closeAddItemBtn {
+        background-color: transparent;
+        height: 40%;
+        width: 5%;
+        border: 1px solid black;
+        border-radius: 50px;
+        margin: 0vh 2vw 0vh auto;
+        cursor:pointer;
+    }
+
+    #addItemBtnLayout {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 20%;
+        width: 100%;
+    }
+
+    #addThisItemBtn {
+        background-color: #006EC4;
+        background-image: url('gallery/food and room services elements/icons/inventory - table icons/white_add.png');
+        background-size: 2vw 4vh;
+        background-position: left 10px center;
+        background-repeat: no-repeat;
+        color: white;
+        height: 50%;
+        width: 20%;
+        padding-left: 30px;
+        border: 1px solid black;
+        border-radius: 10px;
+        margin: 0vh 0vw 0vh auto;
+        font-family: Poppins;
+        cursor: pointer;
+    }
+
+    #addThisItemBtn:hover {
+        color: blue;
+    }
 
 /*MAINTENANCE REQUEST PANEL*/
     #maintenanceRequestPanel {
