--- a/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
@@ -532,7 +532,7 @@ body {
         align-items: center;
         height: 5vh;
         width: 97%;
-        margin: 3vh 0vw 0vh auto;
+        margin: 3vh 0vw 0vh 5vw;
      
     }
 
